--- a/c.html
+++ b/c.html
@@ -6,23 +6,31 @@
     <title>My Website</title>
 </head>
 <body bgcolor="yellow">
-    <header>
+    <header><div>
         <font color="blue" face="comic sans ms"><h1>My Website</h1>
         <h2>This Website<br> is about a little coder<br> who is learning how to code.</h2></font>
+    </div>
     </header>
-    <main>
-       <font color="red" face="old english text mt"><h1>Welcome to My Website</h1>
+    <main><article>
+       <div><font color="red" face="old english text mt"><h1>Welcome to My Website</h1>
     <h2><font color="red"> About me-</font></h2>
     </font><h2><font color="green">I got inspired to code my big bro
         who is right now living in US<br>i havent worked on many 
-        websites as i recently started doing html. 
+        websites as i recently started doing html.
     <br>Though I was learning Html in my school better i wanted <br> to know more so i started researching
-    more and more. </font></h2><font color="red"><marquee bgcolor="blue" direction="right" scrollamount="25">
+    more and more. </font></h2></div></article>
+    <!-- aise likhte hei comment-->
+    <aside><div><h1><font color="red">This is an ad.</font></h1></div></aside>
+    <section><div><font color="red"><marquee bgcolor="blue" direction="right" scrollamount="25">
         <h1> I Like Football :) </h1></marquee></font>
-        <img src="f.jpg" alt="a Football">
+       <a href="https://github.com/kritarth5055/projects" target="_main"><img src="WhatsApp Image 2024-08-29 at 15.59.55_246d4515.jpg" alt="me"></a>
+    </section></div>
+       
     </main>
     <footer>
-        <h1><a href="d.html"> Click here for Next Page...</a></h1
+        <div><h1><a href="d.html" target="_main"> Click here for Next Page...</a></h1>
+        </div>
     </footer>
+    
 </body>
 </html>
